// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SectionLabel When hideSectionHeader is true should add styling to hide SectionLabel for all breakpoints 1`] = `
.emotion-6 {
  margin: 0;
  padding: 0;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  min-height: 2.75rem;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

@media (min-width:37.5rem) {
  .emotion-2 {
    -webkit-align-items: stretch;
    -webkit-box-align: stretch;
    -ms-flex-align: stretch;
    align-items: stretch;
  }
}

.emotion-0 {
  font-size: 1.125rem;
  line-height: 1.375rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  background-color: #FDFDFD;
  margin: 1rem 0;
  padding-right: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-0 {
    font-size: 1.25rem;
    line-height: 1.5rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-0 {
    font-size: 1.5rem;
    line-height: 1.75rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-0 {
    margin: 0;
  }
}

@media (min-width:37.5rem) {
  .emotion-0 {
    padding-right: 1rem;
  }
}

.emotion-8 {
  position: relative;
  z-index: 0;
  color: #3F3F42;
  margin-top: 2rem;
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
}

@media (min-width:37.5rem) {
  .emotion-8 {
    margin-top: 1.5rem;
  }
}

@media (min-width:63rem) {
  .emotion-8 {
    margin-bottom: 1.5rem;
  }
}

<div>
  <div
    class="emotion-8 emotion-9"
  >
    <h2
      class="emotion-6 emotion-7"
    >
      <span
        class="emotion-4 emotion-5"
      >
        <span
          class="emotion-2 emotion-3"
        >
          <span
            class="emotion-0 emotion-1"
            dir="ltr"
            id="test-section-label"
          >
            This is the text in a SectionLabel
          </span>
        </span>
      </span>
    </h2>
  </div>
</div>
`;

exports[`SectionLabel With bar With linking title should render correctly 1`] = `
.emotion-14 {
  position: relative;
  z-index: 0;
  color: #3F3F42;
  margin-top: 2rem;
}

@media (min-width:37.5rem) {
  .emotion-14 {
    margin-top: 1.5rem;
  }
}

@media (min-width:63rem) {
  .emotion-14 {
    margin-bottom: 1.5rem;
  }
}

.emotion-0 {
  border-top: 0.0625rem solid #AEAEB5;
  z-index: -1;
}

@media screen and (-ms-high-contrast:active) {
  .emotion-0 {
    border-color: windowText;
  }
}

@media (min-width:37.5rem) {
  .emotion-0 {
    position: absolute;
    left: 0;
    right: 0;
    top: 1.375rem;
  }
}

.emotion-12 {
  margin: 0;
  padding: 0;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  min-height: 2.75rem;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

@media (min-width:37.5rem) {
  .emotion-6 {
    -webkit-align-items: stretch;
    -webkit-box-align: stretch;
    -ms-flex-align: stretch;
    align-items: stretch;
  }
}

.emotion-2 {
  font-size: 1.125rem;
  line-height: 1.375rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  background-color: #FDFDFD;
  margin: 1rem 0;
  padding-right: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-2 {
    font-size: 1.25rem;
    line-height: 1.5rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-2 {
    font-size: 1.5rem;
    line-height: 1.75rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-2 {
    margin: 0;
  }
}

@media (min-width:37.5rem) {
  .emotion-2 {
    padding-right: 1rem;
  }
}

.emotion-10 {
  color: #222222;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-10:focus,
.emotion-10:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-4 {
  font-size: 0.9375rem;
  line-height: 1.125rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  margin: 1rem 0;
  color: #222222;
  background-color: #FDFDFD;
  white-space: nowrap;
  padding-left: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-4 {
    font-size: 0.9375rem;
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-4 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-4 {
    margin: 0;
  }
}

<div>
  <div
    class="emotion-14 emotion-15"
  >
    <div
      class="emotion-0 emotion-1"
    />
    <h2
      class="emotion-12 emotion-13"
    >
      <a
        aria-labelledby="test-section-label"
        class="emotion-10 emotion-11"
        href="/igbo/other-index"
      >
        <span
          class="emotion-8 emotion-9"
        >
          <span
            class="emotion-6 emotion-7"
            role="text"
          >
            <span
              class="emotion-2 emotion-3"
              dir="ltr"
              id="test-section-label"
            >
              This is text in a linking SectionLabel.
            </span>
            <span
              aria-hidden="true"
              class="emotion-4 emotion-5"
              dir="ltr"
            >
              See All
            </span>
          </span>
        </span>
      </a>
    </h2>
  </div>
</div>
`;

exports[`SectionLabel With bar With linking title should render correctly with arabic script typography values 1`] = `
.emotion-14 {
  position: relative;
  z-index: 0;
  color: #3F3F42;
  margin-top: 2rem;
}

@media (min-width:37.5rem) {
  .emotion-14 {
    margin-top: 1.5rem;
  }
}

@media (min-width:63rem) {
  .emotion-14 {
    margin-bottom: 1.5rem;
  }
}

.emotion-12 {
  margin: 0;
  padding: 0;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  min-height: 2.75rem;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

@media (min-width:37.5rem) {
  .emotion-6 {
    -webkit-align-items: stretch;
    -webkit-box-align: stretch;
    -ms-flex-align: stretch;
    align-items: stretch;
  }
}

.emotion-0 {
  border-top: 0.0625rem solid #AEAEB5;
  z-index: -1;
}

@media screen and (-ms-high-contrast:active) {
  .emotion-0 {
    border-color: windowText;
  }
}

@media (min-width:37.5rem) {
  .emotion-0 {
    position: absolute;
    left: 0;
    right: 0;
    top: 1.625rem;
  }
}

.emotion-2 {
  font-size: 1.5rem;
  line-height: 2rem;
  font-family: "BBC Reith Qalam",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 400;
  font-style: normal;
  background-color: #FDFDFD;
  margin: 1rem 0;
  padding-left: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-2 {
    font-size: 1.625rem;
    line-height: 2.25rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-2 {
    font-size: 1.75rem;
    line-height: 2.25rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-2 {
    margin: 0;
  }
}

@media (min-width:37.5rem) {
  .emotion-2 {
    padding-left: 1rem;
  }
}

.emotion-10 {
  color: #222222;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-10:focus,
.emotion-10:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-4 {
  font-size: 1.0625rem;
  line-height: 1.5rem;
  font-family: "BBC Reith Qalam",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 700;
  font-style: normal;
  margin: 1rem 0;
  color: #222222;
  background-color: #FDFDFD;
  white-space: nowrap;
  padding-right: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-4 {
    font-size: 1.125rem;
    line-height: 1.5rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-4 {
    font-size: 1.125rem;
    line-height: 1.5rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-4 {
    margin: 0;
  }
}

<div>
  <div
    class="emotion-14 emotion-15"
  >
    <div
      class="emotion-0 emotion-1"
    />
    <h2
      class="emotion-12 emotion-13"
    >
      <a
        aria-labelledby="test-section-label"
        class="emotion-10 emotion-11"
        href="/igbo/other-index"
      >
        <span
          class="emotion-8 emotion-9"
        >
          <span
            class="emotion-6 emotion-7"
            role="text"
          >
            <span
              class="emotion-2 emotion-3"
              dir="rtl"
              id="test-section-label"
            >
              بعض محتوى النص
            </span>
            <span
              aria-hidden="true"
              class="emotion-4 emotion-5"
              dir="rtl"
            >
              See All
            </span>
          </span>
        </span>
      </a>
    </h2>
  </div>
</div>
`;

exports[`SectionLabel With bar With linking title should render correctly with explicit text direction 1`] = `
.emotion-14 {
  position: relative;
  z-index: 0;
  color: #3F3F42;
  margin-top: 2rem;
}

@media (min-width:37.5rem) {
  .emotion-14 {
    margin-top: 1.5rem;
  }
}

@media (min-width:63rem) {
  .emotion-14 {
    margin-bottom: 1.5rem;
  }
}

.emotion-0 {
  border-top: 0.0625rem solid #AEAEB5;
  z-index: -1;
}

@media screen and (-ms-high-contrast:active) {
  .emotion-0 {
    border-color: windowText;
  }
}

@media (min-width:37.5rem) {
  .emotion-0 {
    position: absolute;
    left: 0;
    right: 0;
    top: 1.375rem;
  }
}

.emotion-12 {
  margin: 0;
  padding: 0;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  min-height: 2.75rem;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

@media (min-width:37.5rem) {
  .emotion-6 {
    -webkit-align-items: stretch;
    -webkit-box-align: stretch;
    -ms-flex-align: stretch;
    align-items: stretch;
  }
}

.emotion-2 {
  font-size: 1.125rem;
  line-height: 1.375rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  background-color: #FDFDFD;
  margin: 1rem 0;
  padding-right: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-2 {
    font-size: 1.25rem;
    line-height: 1.5rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-2 {
    font-size: 1.5rem;
    line-height: 1.75rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-2 {
    margin: 0;
  }
}

@media (min-width:37.5rem) {
  .emotion-2 {
    padding-right: 1rem;
  }
}

.emotion-10 {
  color: #222222;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-10:focus,
.emotion-10:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-4 {
  font-size: 0.9375rem;
  line-height: 1.125rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  margin: 1rem 0;
  color: #222222;
  background-color: #FDFDFD;
  white-space: nowrap;
  padding-left: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-4 {
    font-size: 0.9375rem;
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-4 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-4 {
    margin: 0;
  }
}

<div>
  <div
    class="emotion-14 emotion-15"
  >
    <div
      class="emotion-0 emotion-1"
    />
    <h2
      class="emotion-12 emotion-13"
    >
      <a
        aria-labelledby="test-section-label"
        class="emotion-10 emotion-11"
        href="/igbo/other-index"
      >
        <span
          class="emotion-8 emotion-9"
        >
          <span
            class="emotion-6 emotion-7"
            role="text"
          >
            <span
              class="emotion-2 emotion-3"
              dir="ltr"
              id="test-section-label"
            >
              This is text in a SectionLabel rendering in ltr mode.
            </span>
            <span
              aria-hidden="true"
              class="emotion-4 emotion-5"
              dir="ltr"
            >
              See All
            </span>
          </span>
        </span>
      </a>
    </h2>
  </div>
</div>
`;

exports[`SectionLabel With bar With linking title should render correctly with explicitly showing the bar 1`] = `
.emotion-14 {
  position: relative;
  z-index: 0;
  color: #3F3F42;
  margin-top: 2rem;
}

@media (min-width:37.5rem) {
  .emotion-14 {
    margin-top: 1.5rem;
  }
}

@media (min-width:63rem) {
  .emotion-14 {
    margin-bottom: 1.5rem;
  }
}

.emotion-0 {
  border-top: 0.0625rem solid #AEAEB5;
  z-index: -1;
}

@media screen and (-ms-high-contrast:active) {
  .emotion-0 {
    border-color: windowText;
  }
}

@media (min-width:37.5rem) {
  .emotion-0 {
    position: absolute;
    left: 0;
    right: 0;
    top: 1.375rem;
  }
}

.emotion-12 {
  margin: 0;
  padding: 0;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  min-height: 2.75rem;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

@media (min-width:37.5rem) {
  .emotion-6 {
    -webkit-align-items: stretch;
    -webkit-box-align: stretch;
    -ms-flex-align: stretch;
    align-items: stretch;
  }
}

.emotion-2 {
  font-size: 1.125rem;
  line-height: 1.375rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  background-color: #FDFDFD;
  margin: 1rem 0;
  padding-right: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-2 {
    font-size: 1.25rem;
    line-height: 1.5rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-2 {
    font-size: 1.5rem;
    line-height: 1.75rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-2 {
    margin: 0;
  }
}

@media (min-width:37.5rem) {
  .emotion-2 {
    padding-right: 1rem;
  }
}

.emotion-10 {
  color: #222222;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-10:focus,
.emotion-10:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-4 {
  font-size: 0.9375rem;
  line-height: 1.125rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  margin: 1rem 0;
  color: #222222;
  background-color: #FDFDFD;
  white-space: nowrap;
  padding-left: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-4 {
    font-size: 0.9375rem;
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-4 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-4 {
    margin: 0;
  }
}

<div>
  <div
    class="emotion-14 emotion-15"
  >
    <div
      class="emotion-0 emotion-1"
    />
    <h2
      class="emotion-12 emotion-13"
    >
      <a
        aria-labelledby="test-section-label"
        class="emotion-10 emotion-11"
        href="/igbo/other-index"
      >
        <span
          class="emotion-8 emotion-9"
        >
          <span
            class="emotion-6 emotion-7"
            role="text"
          >
            <span
              class="emotion-2 emotion-3"
              dir="ltr"
              id="test-section-label"
            >
              This is text in a SectionLabel, and there is a bar over to the right
            </span>
            <span
              aria-hidden="true"
              class="emotion-4 emotion-5"
              dir="ltr"
            >
              See All
            </span>
          </span>
        </span>
      </a>
    </h2>
  </div>
</div>
`;

exports[`SectionLabel With bar With plain title should render correctly 1`] = `
.emotion-10 {
  position: relative;
  z-index: 0;
  color: #3F3F42;
  margin-top: 2rem;
}

@media (min-width:37.5rem) {
  .emotion-10 {
    margin-top: 1.5rem;
  }
}

@media (min-width:63rem) {
  .emotion-10 {
    margin-bottom: 1.5rem;
  }
}

.emotion-0 {
  border-top: 0.0625rem solid #AEAEB5;
  z-index: -1;
}

@media screen and (-ms-high-contrast:active) {
  .emotion-0 {
    border-color: windowText;
  }
}

@media (min-width:37.5rem) {
  .emotion-0 {
    position: absolute;
    left: 0;
    right: 0;
    top: 1.375rem;
  }
}

.emotion-8 {
  margin: 0;
  padding: 0;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  min-height: 2.75rem;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

@media (min-width:37.5rem) {
  .emotion-4 {
    -webkit-align-items: stretch;
    -webkit-box-align: stretch;
    -ms-flex-align: stretch;
    align-items: stretch;
  }
}

.emotion-2 {
  font-size: 1.125rem;
  line-height: 1.375rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  background-color: #FDFDFD;
  margin: 1rem 0;
  padding-right: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-2 {
    font-size: 1.25rem;
    line-height: 1.5rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-2 {
    font-size: 1.5rem;
    line-height: 1.75rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-2 {
    margin: 0;
  }
}

@media (min-width:37.5rem) {
  .emotion-2 {
    padding-right: 1rem;
  }
}

<div>
  <div
    class="emotion-10 emotion-11"
  >
    <div
      class="emotion-0 emotion-1"
    />
    <h2
      class="emotion-8 emotion-9"
    >
      <span
        class="emotion-6 emotion-7"
      >
        <span
          class="emotion-4 emotion-5"
        >
          <span
            class="emotion-2 emotion-3"
            dir="ltr"
            id="test-section-label"
          >
            This is text in a SectionLabel.
          </span>
        </span>
      </span>
    </h2>
  </div>
</div>
`;

exports[`SectionLabel With bar With plain title should render correctly with arabic script typography values 1`] = `
.emotion-10 {
  position: relative;
  z-index: 0;
  color: #3F3F42;
  margin-top: 2rem;
}

@media (min-width:37.5rem) {
  .emotion-10 {
    margin-top: 1.5rem;
  }
}

@media (min-width:63rem) {
  .emotion-10 {
    margin-bottom: 1.5rem;
  }
}

.emotion-8 {
  margin: 0;
  padding: 0;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  min-height: 2.75rem;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

@media (min-width:37.5rem) {
  .emotion-4 {
    -webkit-align-items: stretch;
    -webkit-box-align: stretch;
    -ms-flex-align: stretch;
    align-items: stretch;
  }
}

.emotion-0 {
  border-top: 0.0625rem solid #AEAEB5;
  z-index: -1;
}

@media screen and (-ms-high-contrast:active) {
  .emotion-0 {
    border-color: windowText;
  }
}

@media (min-width:37.5rem) {
  .emotion-0 {
    position: absolute;
    left: 0;
    right: 0;
    top: 1.625rem;
  }
}

.emotion-2 {
  font-size: 1.5rem;
  line-height: 2rem;
  font-family: "BBC Reith Qalam",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 400;
  font-style: normal;
  background-color: #FDFDFD;
  margin: 1rem 0;
  padding-left: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-2 {
    font-size: 1.625rem;
    line-height: 2.25rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-2 {
    font-size: 1.75rem;
    line-height: 2.25rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-2 {
    margin: 0;
  }
}

@media (min-width:37.5rem) {
  .emotion-2 {
    padding-left: 1rem;
  }
}

<div>
  <div
    class="emotion-10 emotion-11"
  >
    <div
      class="emotion-0 emotion-1"
    />
    <h2
      class="emotion-8 emotion-9"
    >
      <span
        class="emotion-6 emotion-7"
      >
        <span
          class="emotion-4 emotion-5"
        >
          <span
            class="emotion-2 emotion-3"
            dir="rtl"
            id="test-section-label"
          >
            بعض محتوى النص
          </span>
        </span>
      </span>
    </h2>
  </div>
</div>
`;

exports[`SectionLabel With bar With plain title should render correctly with explicit text direction 1`] = `
.emotion-10 {
  position: relative;
  z-index: 0;
  color: #3F3F42;
  margin-top: 2rem;
}

@media (min-width:37.5rem) {
  .emotion-10 {
    margin-top: 1.5rem;
  }
}

@media (min-width:63rem) {
  .emotion-10 {
    margin-bottom: 1.5rem;
  }
}

.emotion-0 {
  border-top: 0.0625rem solid #AEAEB5;
  z-index: -1;
}

@media screen and (-ms-high-contrast:active) {
  .emotion-0 {
    border-color: windowText;
  }
}

@media (min-width:37.5rem) {
  .emotion-0 {
    position: absolute;
    left: 0;
    right: 0;
    top: 1.375rem;
  }
}

.emotion-8 {
  margin: 0;
  padding: 0;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  min-height: 2.75rem;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

@media (min-width:37.5rem) {
  .emotion-4 {
    -webkit-align-items: stretch;
    -webkit-box-align: stretch;
    -ms-flex-align: stretch;
    align-items: stretch;
  }
}

.emotion-2 {
  font-size: 1.125rem;
  line-height: 1.375rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  background-color: #FDFDFD;
  margin: 1rem 0;
  padding-right: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-2 {
    font-size: 1.25rem;
    line-height: 1.5rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-2 {
    font-size: 1.5rem;
    line-height: 1.75rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-2 {
    margin: 0;
  }
}

@media (min-width:37.5rem) {
  .emotion-2 {
    padding-right: 1rem;
  }
}

<div>
  <div
    class="emotion-10 emotion-11"
  >
    <div
      class="emotion-0 emotion-1"
    />
    <h2
      class="emotion-8 emotion-9"
    >
      <span
        class="emotion-6 emotion-7"
      >
        <span
          class="emotion-4 emotion-5"
        >
          <span
            class="emotion-2 emotion-3"
            dir="ltr"
            id="test-section-label"
          >
            This is text in a SectionLabel rendering in ltr mode.
          </span>
        </span>
      </span>
    </h2>
  </div>
</div>
`;

exports[`SectionLabel With bar With plain title should render correctly with explicitly showing the bar 1`] = `
.emotion-10 {
  position: relative;
  z-index: 0;
  color: #3F3F42;
  margin-top: 2rem;
}

@media (min-width:37.5rem) {
  .emotion-10 {
    margin-top: 1.5rem;
  }
}

@media (min-width:63rem) {
  .emotion-10 {
    margin-bottom: 1.5rem;
  }
}

.emotion-0 {
  border-top: 0.0625rem solid #AEAEB5;
  z-index: -1;
}

@media screen and (-ms-high-contrast:active) {
  .emotion-0 {
    border-color: windowText;
  }
}

@media (min-width:37.5rem) {
  .emotion-0 {
    position: absolute;
    left: 0;
    right: 0;
    top: 1.375rem;
  }
}

.emotion-8 {
  margin: 0;
  padding: 0;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  min-height: 2.75rem;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

@media (min-width:37.5rem) {
  .emotion-4 {
    -webkit-align-items: stretch;
    -webkit-box-align: stretch;
    -ms-flex-align: stretch;
    align-items: stretch;
  }
}

.emotion-2 {
  font-size: 1.125rem;
  line-height: 1.375rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  background-color: #FDFDFD;
  margin: 1rem 0;
  padding-right: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-2 {
    font-size: 1.25rem;
    line-height: 1.5rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-2 {
    font-size: 1.5rem;
    line-height: 1.75rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-2 {
    margin: 0;
  }
}

@media (min-width:37.5rem) {
  .emotion-2 {
    padding-right: 1rem;
  }
}

<div>
  <div
    class="emotion-10 emotion-11"
  >
    <div
      class="emotion-0 emotion-1"
    />
    <h2
      class="emotion-8 emotion-9"
    >
      <span
        class="emotion-6 emotion-7"
      >
        <span
          class="emotion-4 emotion-5"
        >
          <span
            class="emotion-2 emotion-3"
            dir="ltr"
            id="test-section-label"
          >
            This is text in a SectionLabel, and there is a bar over to the right
          </span>
        </span>
      </span>
    </h2>
  </div>
</div>
`;

exports[`SectionLabel With heading overriden should render a strong element instead of an h2 1`] = `
.emotion-8 {
  position: relative;
  z-index: 0;
  color: #3F3F42;
  margin-top: 2rem;
}

@media (min-width:37.5rem) {
  .emotion-8 {
    margin-top: 1.5rem;
  }
}

@media (min-width:63rem) {
  .emotion-8 {
    margin-bottom: 1.5rem;
  }
}

.emotion-6 {
  margin: 0;
  padding: 0;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  min-height: 2.75rem;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

@media (min-width:37.5rem) {
  .emotion-2 {
    -webkit-align-items: stretch;
    -webkit-box-align: stretch;
    -ms-flex-align: stretch;
    align-items: stretch;
  }
}

.emotion-0 {
  font-size: 1.125rem;
  line-height: 1.375rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  background-color: #FDFDFD;
  margin: 1rem 0;
  padding-right: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-0 {
    font-size: 1.25rem;
    line-height: 1.5rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-0 {
    font-size: 1.5rem;
    line-height: 1.75rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-0 {
    margin: 0;
  }
}

@media (min-width:37.5rem) {
  .emotion-0 {
    padding-right: 1rem;
  }
}

<div>
  <div
    class="emotion-8 emotion-9"
  >
    <strong
      class="emotion-6 emotion-7"
    >
      <span
        class="emotion-4 emotion-5"
      >
        <span
          class="emotion-2 emotion-3"
        >
          <span
            class="emotion-0 emotion-1"
            dir="ltr"
            id="test-section-label"
          >
            This is text in a SectionLabel.
          </span>
        </span>
      </span>
    </strong>
  </div>
</div>
`;

exports[`SectionLabel Without bar With linking title should render correctly 1`] = `
.emotion-12 {
  position: relative;
  z-index: 0;
  color: #3F3F42;
  margin-top: 2rem;
}

@media (min-width:37.5rem) {
  .emotion-12 {
    margin-top: 1.5rem;
  }
}

@media (min-width:63rem) {
  .emotion-12 {
    margin-bottom: 1.5rem;
  }
}

.emotion-10 {
  margin: 0;
  padding: 0;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  min-height: 2.75rem;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

@media (min-width:37.5rem) {
  .emotion-4 {
    -webkit-align-items: stretch;
    -webkit-box-align: stretch;
    -ms-flex-align: stretch;
    align-items: stretch;
  }
}

.emotion-0 {
  font-size: 1.125rem;
  line-height: 1.375rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  background-color: #FDFDFD;
  margin: 1rem 0;
  padding-right: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-0 {
    font-size: 1.25rem;
    line-height: 1.5rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-0 {
    font-size: 1.5rem;
    line-height: 1.75rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-0 {
    margin: 0;
  }
}

@media (min-width:37.5rem) {
  .emotion-0 {
    padding-right: 1rem;
  }
}

.emotion-8 {
  color: #222222;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-8:focus,
.emotion-8:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-2 {
  font-size: 0.9375rem;
  line-height: 1.125rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  margin: 1rem 0;
  color: #222222;
  background-color: #FDFDFD;
  white-space: nowrap;
  padding-left: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-2 {
    font-size: 0.9375rem;
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-2 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-2 {
    margin: 0;
  }
}

<div>
  <div
    class="emotion-12 emotion-13"
  >
    <h2
      class="emotion-10 emotion-11"
    >
      <a
        aria-labelledby="test-section-label"
        class="emotion-8 emotion-9"
        href="/igbo/other-index"
      >
        <span
          class="emotion-6 emotion-7"
        >
          <span
            class="emotion-4 emotion-5"
            role="text"
          >
            <span
              class="emotion-0 emotion-1"
              dir="ltr"
              id="test-section-label"
            >
              This is text in a SectionLabel.
            </span>
            <span
              aria-hidden="true"
              class="emotion-2 emotion-3"
              dir="ltr"
            >
              See All
            </span>
          </span>
        </span>
      </a>
    </h2>
  </div>
</div>
`;

exports[`SectionLabel Without bar With linking title should render correctly with arabic script typography values 1`] = `
.emotion-12 {
  position: relative;
  z-index: 0;
  color: #3F3F42;
  margin-top: 2rem;
}

@media (min-width:37.5rem) {
  .emotion-12 {
    margin-top: 1.5rem;
  }
}

@media (min-width:63rem) {
  .emotion-12 {
    margin-bottom: 1.5rem;
  }
}

.emotion-10 {
  margin: 0;
  padding: 0;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  min-height: 2.75rem;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

@media (min-width:37.5rem) {
  .emotion-4 {
    -webkit-align-items: stretch;
    -webkit-box-align: stretch;
    -ms-flex-align: stretch;
    align-items: stretch;
  }
}

.emotion-0 {
  font-size: 1.5rem;
  line-height: 2rem;
  font-family: "BBC Reith Qalam",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 400;
  font-style: normal;
  background-color: #FDFDFD;
  margin: 1rem 0;
  padding-left: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-0 {
    font-size: 1.625rem;
    line-height: 2.25rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-0 {
    font-size: 1.75rem;
    line-height: 2.25rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-0 {
    margin: 0;
  }
}

@media (min-width:37.5rem) {
  .emotion-0 {
    padding-left: 1rem;
  }
}

.emotion-8 {
  color: #222222;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-8:focus,
.emotion-8:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-2 {
  font-size: 1.0625rem;
  line-height: 1.5rem;
  font-family: "BBC Reith Qalam",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 700;
  font-style: normal;
  margin: 1rem 0;
  color: #222222;
  background-color: #FDFDFD;
  white-space: nowrap;
  padding-right: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-2 {
    font-size: 1.125rem;
    line-height: 1.5rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-2 {
    font-size: 1.125rem;
    line-height: 1.5rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-2 {
    margin: 0;
  }
}

<div>
  <div
    class="emotion-12 emotion-13"
  >
    <h2
      class="emotion-10 emotion-11"
    >
      <a
        aria-labelledby="test-section-label"
        class="emotion-8 emotion-9"
        href="/igbo/other-index"
      >
        <span
          class="emotion-6 emotion-7"
        >
          <span
            class="emotion-4 emotion-5"
            role="text"
          >
            <span
              class="emotion-0 emotion-1"
              dir="rtl"
              id="test-section-label"
            >
              بعض محتوى النص
            </span>
            <span
              aria-hidden="true"
              class="emotion-2 emotion-3"
              dir="rtl"
            >
              See All
            </span>
          </span>
        </span>
      </a>
    </h2>
  </div>
</div>
`;

exports[`SectionLabel Without bar With linking title should render correctly with explicit text direction 1`] = `
.emotion-12 {
  position: relative;
  z-index: 0;
  color: #3F3F42;
  margin-top: 2rem;
}

@media (min-width:37.5rem) {
  .emotion-12 {
    margin-top: 1.5rem;
  }
}

@media (min-width:63rem) {
  .emotion-12 {
    margin-bottom: 1.5rem;
  }
}

.emotion-10 {
  margin: 0;
  padding: 0;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  min-height: 2.75rem;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

@media (min-width:37.5rem) {
  .emotion-4 {
    -webkit-align-items: stretch;
    -webkit-box-align: stretch;
    -ms-flex-align: stretch;
    align-items: stretch;
  }
}

.emotion-0 {
  font-size: 1.125rem;
  line-height: 1.375rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  background-color: #FDFDFD;
  margin: 1rem 0;
  padding-right: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-0 {
    font-size: 1.25rem;
    line-height: 1.5rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-0 {
    font-size: 1.5rem;
    line-height: 1.75rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-0 {
    margin: 0;
  }
}

@media (min-width:37.5rem) {
  .emotion-0 {
    padding-right: 1rem;
  }
}

.emotion-8 {
  color: #222222;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-8:focus,
.emotion-8:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-2 {
  font-size: 0.9375rem;
  line-height: 1.125rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  margin: 1rem 0;
  color: #222222;
  background-color: #FDFDFD;
  white-space: nowrap;
  padding-left: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-2 {
    font-size: 0.9375rem;
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-2 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-2 {
    margin: 0;
  }
}

<div>
  <div
    class="emotion-12 emotion-13"
  >
    <h2
      class="emotion-10 emotion-11"
    >
      <a
        aria-labelledby="test-section-label"
        class="emotion-8 emotion-9"
        href="/igbo/other-index"
      >
        <span
          class="emotion-6 emotion-7"
        >
          <span
            class="emotion-4 emotion-5"
            role="text"
          >
            <span
              class="emotion-0 emotion-1"
              dir="ltr"
              id="test-section-label"
            >
              This is text in a SectionLabel rendering in ltr mode.
            </span>
            <span
              aria-hidden="true"
              class="emotion-2 emotion-3"
              dir="ltr"
            >
              See All
            </span>
          </span>
        </span>
      </a>
    </h2>
  </div>
</div>
`;

exports[`SectionLabel Without bar With plain title should render correctly 1`] = `
.emotion-8 {
  position: relative;
  z-index: 0;
  color: #3F3F42;
  margin-top: 2rem;
}

@media (min-width:37.5rem) {
  .emotion-8 {
    margin-top: 1.5rem;
  }
}

@media (min-width:63rem) {
  .emotion-8 {
    margin-bottom: 1.5rem;
  }
}

.emotion-6 {
  margin: 0;
  padding: 0;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  min-height: 2.75rem;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

@media (min-width:37.5rem) {
  .emotion-2 {
    -webkit-align-items: stretch;
    -webkit-box-align: stretch;
    -ms-flex-align: stretch;
    align-items: stretch;
  }
}

.emotion-0 {
  font-size: 1.125rem;
  line-height: 1.375rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  background-color: #FDFDFD;
  margin: 1rem 0;
  padding-right: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-0 {
    font-size: 1.25rem;
    line-height: 1.5rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-0 {
    font-size: 1.5rem;
    line-height: 1.75rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-0 {
    margin: 0;
  }
}

@media (min-width:37.5rem) {
  .emotion-0 {
    padding-right: 1rem;
  }
}

<div>
  <div
    class="emotion-8 emotion-9"
  >
    <h2
      class="emotion-6 emotion-7"
    >
      <span
        class="emotion-4 emotion-5"
      >
        <span
          class="emotion-2 emotion-3"
        >
          <span
            class="emotion-0 emotion-1"
            dir="ltr"
            id="test-section-label"
          >
            This is text in a SectionLabel.
          </span>
        </span>
      </span>
    </h2>
  </div>
</div>
`;

exports[`SectionLabel Without bar With plain title should render correctly with arabic script typography values 1`] = `
.emotion-8 {
  position: relative;
  z-index: 0;
  color: #3F3F42;
  margin-top: 2rem;
}

@media (min-width:37.5rem) {
  .emotion-8 {
    margin-top: 1.5rem;
  }
}

@media (min-width:63rem) {
  .emotion-8 {
    margin-bottom: 1.5rem;
  }
}

.emotion-6 {
  margin: 0;
  padding: 0;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  min-height: 2.75rem;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

@media (min-width:37.5rem) {
  .emotion-2 {
    -webkit-align-items: stretch;
    -webkit-box-align: stretch;
    -ms-flex-align: stretch;
    align-items: stretch;
  }
}

.emotion-0 {
  font-size: 1.5rem;
  line-height: 2rem;
  font-family: "BBC Reith Qalam",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 400;
  font-style: normal;
  background-color: #FDFDFD;
  margin: 1rem 0;
  padding-left: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-0 {
    font-size: 1.625rem;
    line-height: 2.25rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-0 {
    font-size: 1.75rem;
    line-height: 2.25rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-0 {
    margin: 0;
  }
}

@media (min-width:37.5rem) {
  .emotion-0 {
    padding-left: 1rem;
  }
}

<div>
  <div
    class="emotion-8 emotion-9"
  >
    <h2
      class="emotion-6 emotion-7"
    >
      <span
        class="emotion-4 emotion-5"
      >
        <span
          class="emotion-2 emotion-3"
        >
          <span
            class="emotion-0 emotion-1"
            dir="rtl"
            id="test-section-label"
          >
            بعض محتوى النص
          </span>
        </span>
      </span>
    </h2>
  </div>
</div>
`;

exports[`SectionLabel Without bar With plain title should render correctly with explicit text direction 1`] = `
.emotion-8 {
  position: relative;
  z-index: 0;
  color: #3F3F42;
  margin-top: 2rem;
}

@media (min-width:37.5rem) {
  .emotion-8 {
    margin-top: 1.5rem;
  }
}

@media (min-width:63rem) {
  .emotion-8 {
    margin-bottom: 1.5rem;
  }
}

.emotion-6 {
  margin: 0;
  padding: 0;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  min-height: 2.75rem;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

@media (min-width:37.5rem) {
  .emotion-2 {
    -webkit-align-items: stretch;
    -webkit-box-align: stretch;
    -ms-flex-align: stretch;
    align-items: stretch;
  }
}

.emotion-0 {
  font-size: 1.125rem;
  line-height: 1.375rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  background-color: #FDFDFD;
  margin: 1rem 0;
  padding-right: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-0 {
    font-size: 1.25rem;
    line-height: 1.5rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-0 {
    font-size: 1.5rem;
    line-height: 1.75rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-0 {
    margin: 0;
  }
}

@media (min-width:37.5rem) {
  .emotion-0 {
    padding-right: 1rem;
  }
}

<div>
  <div
    class="emotion-8 emotion-9"
  >
    <h2
      class="emotion-6 emotion-7"
    >
      <span
        class="emotion-4 emotion-5"
      >
        <span
          class="emotion-2 emotion-3"
        >
          <span
            class="emotion-0 emotion-1"
            dir="ltr"
            id="test-section-label"
          >
            This is text in a SectionLabel rendering in ltr mode.
          </span>
        </span>
      </span>
    </h2>
  </div>
</div>
`;
